# batoid_rubin

./: .gitignore  CHANGELOG.rst  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  sdist.yml
batoid_rubin/: __init__.py  align_game.py  builder.py  comcam_align_game.py  comcam_interact.py  lsstcam_interact.py  utils.py  visualize.py
batoid_rubin/data/: .gitignore  download_rubin_data.py  m1_figure_error.h5  m2_figure_error.mat  m3_figure_error.h5
notebooks/: Align Game.ipynb  ComCam Align Game.ipynb  ComCam Interact.ipynb  LSSTCam Interact.ipynb  Visualize.ipynb
scripts/: M1M3_NASTRAN.py  M1M3_NASTRAN_to_norm.py  M1M3_decompose_sag.py  M1M3_format_for_batoid.py  M1M3_match_forces.py  M1M3_norm_to_sag.py  M2_NASTRAN.py  M2_NASTRAN_to_norm.py  M2_decompose_sag.py  M2_format_for_batoid.py  M2_match_forces.py  M2_norm_to_sag.py  README.md  bend.sh  bend_ptt.sh  chip_heights_format_for_batoid.py  corrected.sh  create_bend_legacy.py  create_height_map.py  fea.md  format_IM_fea.py  improved.sh  match.sh  match_ptt.sh  mirror_figure_format_for_batoid.py  orig.sh  plot_SVD_modes.py  plot_decomposition.py  plot_height_map.py  plot_xin_M2_comparison.py  plot_xin_comparison.py
scripts/plots/: dof.py  intrinsic.py  tools.py
tests/: .coveragerc  test_builder.py  test_downloads.py
validation/aos_dof/: .gitignore  Compare AOS DOF OPDs.ipynb  setup.sh  ts_phosim_calc_aos_dof_opds.py
validation/fea/: Compare FEA OPDs.ipynb  setup.sh  ts_phosim_calc_fea_opds.py
validation/nominal/: Compare Nominal OPDs.ipynb  setup.sh  ts_phosim_calc_nominal_opds.py
(+2 files in other folders)
