[project]
name = "batoid_rubin"
authors = [
    {name = "Josh Meyers", email = "jmeyers314@gmail.com"},
]
dependencies = [
    "batoid",
    "zenodo_get"
]
dynamic = ["version"]

[project.optional-dependencies]
notebooks = [
    "danish",
    "ipywidgets",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "batoid_rubin",
]

[tool.setuptools.dynamic]
version = {attr = "batoid_rubin.__version__"}
